Fix problem with blank space at the bottom of image in lightbox on mobile

--- a/src/scss/components/_gallery.scss
+++ b/src/scss/components/_gallery.scss
@@ -1,3 +1,7 @@
 .gallery__item {
   opacity: 0;
 }
+
+.uk-modal-dialog>img {
+  height: 100%;
+}
